Bug 1618102 - Use BrowsingContext for Full screen API "is caller in focused tab?" check. r=farre

Differential Revision: https://phabricator.services.mozilla.com/D64288

--HG--
extra : moz-landing-system : lando